--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "hhtps://kr3artive.github.io/React.JS-PrimeCircuit",
   "name": "prime-circuit",
   "private": true,
   "version": "0.0.0",
